# ixland

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .jscpd.json  .ralph-loop-completion-marker  .swiftlint.yml  AGENTS.md  BUILD.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  REALITY_CHECK.md  SUMMARY.md  VERSION  WAVE-1-VALIDATION-RESULTS.md  a-Shell-mini copy-Info.plist  a_shell_kernel.h  a_shell_kernel.m  a_shell_process.c  a_shell_system.h  a_shell_system.m  build_wamr_ios_static.sh  c_files.txt  docker-compose.build.yml  docker-compose.yml  getopt.c  ios_error.h  libc_replacement.c  run-tests.sh  test_simple.c  test_simple_kernel.c  validation-state.json
ixland-libc/: CMakeLists.txt  README.md
ixland-libc/include/: grp.h  pwd.h
ixland-libc/include/iox/: iox.h  iox_syscalls.h  iox_types.h
ixland-libc/include/iox/sys/: types.h
ixland-libc/include/ixland/: ixland_syscalls.h  ixland_types.h
ixland-libc/include/linux/: epoll.h  fcntl.h  mman.h  poll.h  resource.h  signal.h  stat.h  time.h  types.h  unistd.h  wait.h
ixland-libc/src/: iox_version.c  ixland_version.c
ixland-libc/src/usersdb/: grp.c  internal_provider.h  pwd.c
ixland-libc/tests/: test_core_smoke.c
ixland-packages/: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  PATCH_TEMPLATE.md  README.md  build_wamr_ios.sh
ixland-packages/Tests/: a_shell_session_tests.m  iox_test.h
ixland-packages/Tests/unit/: test_basic.c  test_fdtable.c  test_pgrp_session.c  test_pid.c  test_signal.c  test_simple.c  test_tty.c
ixland-packages/docs/: IMPLEMENTATION_STATUS.md
ixland-packages/drivers/tty/: tty.h
ixland-packages/fs/: fdtable.c  fdtable.h  iox_path.c
ixland-packages/include/: grp.h
ixland-packages/include/iox/: iox_syscalls.h  iox_types.h  iox_wamr.h
ixland-packages/kernel/signal/: iox_signal.h
ixland-packages/kernel/task/: exit.c  fork.c  pid.c  wait.c
ixland-packages/libioxTest/: README.md  create-xcode-project.sh
ixland-packages/libioxTest/IOXTestSuite/: TEST_COVERAGE.md
ixland-packages/libioxTest/IOXTestSuite/IOXTestSuite.xcodeproj/: project.pbxproj
ixland-packages/libioxTest/IOXTestSuite/IOXTestSuiteTests/: IOXEnvironmentTests.mm  IOXFilesystemTests.mm  IOXTestHelpers.mm  IOXTtyTests.mm
ixland-packages/libioxTest/libioxTest/: main.m
ixland-packages/libioxTest/libioxTest/libioxTest.xcodeproj/: project.pbxproj
ixland-packages/scripts/: a_shell_package.sh  build-package.sh  ixland_package.sh  package-xcframeworks.sh  test-all.sh
ixland-packages/src/iox/core/: iox_file_v2.c
ixland-packages/src/iox/wamr/: iox_wamr.c
ixland-packages/tools/: bootstrap.sh
ixland-packages/wheel-index/: README.md
ixland-system/: .gitmodules  AGENTS.md  BUILD.md  BUILD_COMPLETE.md  BUILD_STATUS.md  CMakeLists.txt  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  Makefile  README.md  WAMR_INTEGRATION.md  build_wamr_ios.sh  fix_frameworks.sh  getopt.c  ixland_process.c  termcap.h
ixland-system/.xcodebuildmcp/: config.yaml
ixland-system/Tests/: FileSafetyTests.swift  TierAConformanceTests.swift  ixland_cmd_tests.m  ixland_session_tests.m  ixland_test.h
ixland-system/Tests/fixtures/: README.md
ixland-system/Tests/harness/: harness.c  iox_test.h
ixland-system/Tests/iOS/: IXLANDCoreTests.mm
ixland-system/Tests/unit/: stub_vfs_translate.c  test_basic.c  test_cross_integration_headers.c  test_cross_signals.c  test_directory_syscalls.c  test_exec.c  test_fdtable.c  test_file_syscalls.c  test_fork.c  test_hello.c  test_identity_syscalls.c  test_orphan_adoption.c  test_pgrp_session.c  test_pid.c  test_poll_syscalls.c  test_process_lifecycle.c  test_process_real.c  test_process_relationships.c  test_signal.c  test_signal_pending.c  test_signal_process.c  test_simple.c  test_task_alloc_thread_safety.c  test_task_lifecycle.c  test_tty.c  test_vfs_path.c  test_wait.c  test_zombie_process.c
ixland-system/compat/interpose/: iox_interpose.c
ixland-system/compatibility/linux/abi/: ixland_linux_abi.c  ixland_linux_abi.h
ixland-system/docs/: IMPLEMENTATION_STATUS.md  IOX_ARCHITECTURAL_ANALYSIS.md  IXLAND_ARCHITECTURAL_ANALYSIS.md  LIBIOX_ARCHITECTURE.md  LIBIXLAND_ARCHITECTURE.md
ixland-system/drivers/tty/: tty.h
ixland-system/fs/: eventpoll.c  exec.c  exec.h  fcntl.c  fdtable.c  inode.c  iox_path.c  path.c  select.c  stat.c  super.c  vfs.c
ixland-system/fs/tty/: tty.h
ixland-system/fs/vfs/: iox_vfs.c  ixland_vfs.c
ixland-system/include/iox/: iox.h  iox_types.h
ixland-system/kernel/: fork.c  init.c  resource.c  signal.h  sync.c  sys.c  task.c  time.c
ixland-system/kernel/exec/: exec.c  exec.h
ixland-system/kernel/internal/: ixland_kernel.h
ixland-system/kernel/signal/: iox_signal.h  ixland_signal.h  signal.c
ixland-system/kernel/task/: exit.c  fork.c  pid.c  task.c  task.h  wait.c
ixland-system/libioxTest/: build-test.sh  run-simulator-test.sh  setup-xctest-suite.sh
ixland-system/libixlandTest/: README.md  build-test.sh  create-xcode-project.sh  run-simulator-test.sh  setup-xcode-project.sh  setup-xctest-suite.sh
ixland-system/libixlandTest/IXLANDTestSuite/: TEST_COVERAGE.md
ixland-system/net/: iox_network.c
ixland-system/observability/: ixland_observability.h
ixland-system/runtime/linux_host/: ixland_linux_compatibility_host.c  ixland_linux_compatibility_host.h  ixland_linux_compatibility_host_api.h
ixland-system/runtime/native/: registry.c  registry.h
ixland-system/runtime/wasi/: iox_wamr.h  ixland_wamr.h  wasm_adapter.c  wasm_adapter.h
ixland-system/src/: vfs.c
ixland-system/tools/: bootstrap.sh  cleanup-analysis.md  doctor.sh
ixland-toolchain/: CMakeLists.txt  README.md
ixland-toolchain/cmake/: ixland-ios-device.cmake  ixland-ios-simulator.cmake
ixland-wasm/: CMakeLists.txt  README.md
ixland-wasm/docs/: WASM_BOUNDARY_SPEC.md
ixland-wasm/ixland-wasm-engine/: README.md
ixland-wasm/ixland-wasm-host/: README.md
ixland-wasm/ixland-wasm-wasi/: README.md
(+723 files in other folders)
